--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="ranking_gray">#FCFCFCFC</color>
+    <color name="tab_gray">#C9C9C9</color>
+    <color name="cookie_brown">#D38534</color>
 </resources>
