--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="ranking_gray">#FCFCFCFC</color>
     <color name="tab_gray">#C9C9C9</color>
     <color name="cookie_brown">#D38534</color>
+    <color name="my_page_gray">#9E9E9E</color>
 </resources>
