--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="tab_gray">#C9C9C9</color>
     <color name="cookie_brown">#D38534</color>
     <color name="my_page_gray">#9E9E9E</color>
+    <color name="cookie_background">#F2E9E3</color>
 </resources>
