--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -103,12 +103,14 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/main_cookie"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/running_cookie"
-                android:paddingLeft="60dp" />
+                android:paddingLeft="60dp"
+                android:src="@drawable/running_cookie" />
+
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
