--- a/app/src/main/res/drawable/google_background.xml
+++ b/app/src/main/res/drawable/google_background.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#EACEB2" />
+    <solid android:color="#FFFFFF" />
     <corners android:radius="40dp"/> <!-- 모서리 둥글게 -->
 </shape>
