--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,6 +47,7 @@
                     android:layout_marginBottom="5dp"
                     android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/main_coin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="2310"
@@ -60,26 +61,6 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
                         android:src="@drawable/silver_coin" />
-                </FrameLayout>
-
-                <!-- diamond -->
-                <FrameLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="999"
-                        android:fontFamily="@font/cookierun_bold"
-                        android:textColor="#FFFFFF"
-                        android:gravity="end|center_vertical"
-                        android:paddingRight="15dp"
-                        android:background="@drawable/coin_background" />
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/diamond" />
                 </FrameLayout>
             </LinearLayout>
         </LinearLayout>
