--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -26,6 +26,7 @@
                 android:layout_marginBottom="5dp"
                 android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/running_coin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="2310"
