스플래쉬 화면, 그림 이미지 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="cookie_brown">#D38534</color>
     <color name="my_page_gray">#9E9E9E</color>
     <color name="cookie_background">#F2E9E3</color>
+    <color name="company_logo">#FF5F00</color>
 </resources>
