--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Fitness" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Theme.Fitness" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/white</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Fitness" parent="Base.Theme.Fitness" />
 </resources>
