--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -120,32 +120,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/signupButton" />
 
-    <View
+    <TextView
         android:id="@+id/checking_button"
         android:layout_width="80dp"
         android:layout_height="28dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
         android:background="@drawable/check"
+        android:text="중복확인"
+        android:fontFamily="@font/cookierun_regular"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/signup_email"
         app:layout_constraintEnd_toEndOf="@+id/signup_email"
         app:layout_constraintHorizontal_bias="0.91"
         app:layout_constraintStart_toStartOf="@+id/signup_email"
         app:layout_constraintTop_toTopOf="@+id/signup_email"
         app:layout_constraintVertical_bias="0.5" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="중복확인"
-        android:fontFamily="@font/cookierun_regular"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/checking_button"
-        app:layout_constraintEnd_toEndOf="@+id/checking_button"
-        app:layout_constraintStart_toStartOf="@+id/checking_button"
-        app:layout_constraintTop_toTopOf="@+id/checking_button" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
