--- a/app/src/main/res/layout/fragment_cookie.xml
+++ b/app/src/main/res/layout/fragment_cookie.xml
@@ -7,16 +7,45 @@
     android:layout_gravity="center_horizontal"
     android:background="@drawable/cookie_tab_background">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/carouselRecyclerView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="650dp"
-        android:orientation="vertical"
-        android:paddingTop="70dp"
-        android:layout_marginLeft="30dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <!-- coin -->
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="25dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/main_coin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/coin_background"
+                android:fontFamily="@font/cookierun_bold"
+                android:gravity="end|center_vertical"
+                android:paddingRight="15dp"
+                android:text="0"
+                android:textColor="#FFFFFF" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/silver_coin" />
+        </FrameLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/carouselRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="650dp"
+            android:layout_marginLeft="30dp"
+            android:orientation="vertical"
+            android:paddingTop="30dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
