[style] bottom nav bar main theme

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:menu="@menu/navigation_menu"
-            app:itemIconTint="@color/black"
+            app:itemIconTint="@color/nav_item_color"
             app:labelVisibilityMode="labeled"
             app:itemTextColor="@android:color/transparent"/>
 
