--- a/app/src/main/res/layout/logout_layout.xml
+++ b/app/src/main/res/layout/logout_layout.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
+    app:cardElevation="0dp"
     android:layout_gravity="center_horizontal"
     app:cardBackgroundColor="@android:color/transparent">
 
