[feat] add dead if

--- a/app/src/main/res/layout/fragment_cookie.xml
+++ b/app/src/main/res/layout/fragment_cookie.xml
@@ -14,7 +14,7 @@
 
         <!-- coin -->
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="105dp"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:layout_marginEnd="25dp"
