--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -49,6 +49,7 @@
         android:id="@+id/signup_pw"
         android:layout_width="match_parent"
         android:layout_marginHorizontal="30dp"
+        android:inputType="textPassword"
         android:layout_height="56dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/login_background"
@@ -66,6 +67,7 @@
         android:layout_marginHorizontal="30dp"
         android:layout_height="56dp"
         android:layout_marginTop="100dp"
+        android:inputType="textPassword"
         android:background="@drawable/login_background"
         android:fontFamily="@font/cookierun_regular"
         android:hint="Password Confirm"
